fix in home's title margin-bottom spacing and added aditional text to about page

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -205,7 +205,7 @@ main {
   opacity: 0.8;
 }
 .hero-home-section .hero-home-title {
-  margin-bottom: 0.5rem;
+  margin-bottom: 1.25rem;
 }
 .hero-home-section .hero-home-subtitle {
   font-size: 1.2rem;
