--- a/src/sass/views/home.scss
+++ b/src/sass/views/home.scss
@@ -18,7 +18,7 @@
     @include mx.bgHeroImg(-5, '/images/home-bg.jpg', 0.8);
   }
   .hero-home-title {
-    margin-bottom: 0.5rem;
+    margin-bottom: 1.25rem;
   }
   .hero-home-subtitle {
     font-size: 1.2rem;
